bugfix: fill screen on mobile

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -73,7 +73,7 @@ body,
     width: 50%;
     height: auto;
     margin: 0 auto;
-    margin-top: 3%;
+    margin-top: 10%;
     display: flex;
     align-self: center;
     justify-content: center;
@@ -81,7 +81,7 @@ body,
 
   .title {
     font-family: 'Big Noodle Titling Oblique';
-    font-size: 2rem;
+    font-size: 2.5rem;
     margin-top: 5%;
   }
 
@@ -89,6 +89,8 @@ body,
   .style,
   .description {
     font-family: 'Big Noodle Titling';
-    font-size: 1.5rem;
+    font-size: 2rem;
+    margin: 2%;
+    text-align: center;
   }
 }
